# opencv_pratice

./: .clang-format  .gitignore  CMakeLists.txt  README.md
capture_start/: CMakeLists.txt  show_capture_video.cpp
image_show/: CMakeLists.txt  start.cpp
intersection/: CMakeLists.txt  start.cpp
